# libdri2

./: Makefile.am  configure.ac
include/X11/extensions/: dri2.h
src/: Makefile.am  dri2.c
test/: Makefile.am  dri2-nouveau.c  dri2-omap.c  dri2test-nouveau.c  dri2test-omap.c  dri2test.c  dri2test.h  dri2util.c  dri2util.h  dri2videotest.c
